--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -3,14 +3,74 @@
     margin:0;
     padding:0;
 }
+body{
+	font-family: 'Poppins', sans-serif;
+	background: #FFF;
+}
 
-.logo{
-	background: var(--WHITE);
-	width: 100%;
-	height: 7rem;
+ul{
+	padding: 0;
+	list-style: none;
+	
+}
+
+#navegacao ul{
+	position: absolute;
+	width: 350px;
+	height: 97px;
+	left: 1318px;
+	top: 23px;
+	border: 1px solid red;
+}
+
+#navegacao ul li{
+	float: left;
+}
+
+#navegacao ul a{
+	width: 60px;
+	font-size: 12px;
+	line-height: 18px;
+	text-align: center;
+	display: block;
+	text-decoration: none;
+	color: #6D6D6D;
+	border: 1px solid blue;
+	padding-bottom: 1em;
+	align-items: center;
+}
+
+#navegacao ul span{
+	display: flex;
+	position: absolute;
+	text-align: center;
+}
+
+#header_container{
+	position: absolute;
+	width: 1699px;
+	height: 120px;
 	left: 0px;
 	top: 0px;
-	
-	display: flex;
-	align-items: flex-start;
+
+	background: #FCFCFC;
+	box-shadow: 1px 1px 15px rgba(183, 183, 183, 0.25);
+	border-radius: 0px;
+
+}
+
+#navegacao{
+	position: flex;
+}
+
+
+.logo{
+	position: absolute;
+width: 65px;
+height: 66.68px;
+left: 58px;
+top: 25px;
+
+background: url(../imagens/midiavoxlogo.png);
+border-radius: 10px;
 }
