--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -6,7 +6,7 @@
 body{
 	font-family: 'Poppins', sans-serif;
 	background: #FFF;
-	width: 1000px;
+	
 }
 
 ul{
@@ -16,7 +16,8 @@ ul{
 }
 
 #principal {
-	width: 1000px;
+	width: 100%;
+	min-width: 1000px;
 }
 
 #navegacao{
@@ -26,7 +27,7 @@ ul{
 #navegacao ul{
 	position: relative;
 	float: right;
-	width: 340px;
+	width: 27%;
 	height: 97px;
 }
 
@@ -46,19 +47,53 @@ ul{
 }
 
 #header_container{
-	position: absolute;
 	width: 100%;
 	height: 90px;
-	left: 0px;
-	top: 0px;
-
 	background: #FCFCFC;
 	box-shadow: 1px 1px 15px rgba(183, 183, 183, 0.25);
 	border-radius: 0px;
+}
+
+#busca{
+	margin: 3em auto;
+	width: 60%;
+	height: 80px;
+	border: 1px solid darkred;
+}
+
+#table_container{
+	margin: 3em auto;
+	width: 83%;
+	border-radius: 20px 20px 0px 0px;
+	background: #CA2F2F 90%;
+}
+
+#table{
+	width: 100%;
+	align-items: center;
+	text-align: center;
+	background: #FFFFFF;
 
 }
 
+#table_container h2 {
+	color: #FFFFFF;
+	padding: 15px 0 ;
+	height: 50px;
+	text-align: center;
+	border-radius: 20px 20px 0px 0px;
+}
 
+#table td{
+	width: 10%;
+	color: #FFFFFF;
+}
+
+.th_names{
+	width: 100%;
+	height: 50px;
+	background: #CA2F2F 90%;
+}
 
 
 .logo{
