--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -54,6 +54,10 @@ ul{
 }
 
 #busca{
+	display: flex;
+	justify-content: space-around;
+	padding: 0 10px;
+	align-items: center;
 	background: #FFFFFF;
 	margin: 5em auto;
 	width: 50%;
@@ -63,12 +67,8 @@ ul{
 }
 
 #filtro{
-	position: relative;
-	left: 25px;
-	top: 20px;
-	bottom: 20px;
 	padding: 5px;
-	width: 40%;
+	width: 50%;
 	height: 40px;
 	border: 2px solid rgba(196, 196, 196, 0.63);
 	border-radius: 100px;
@@ -89,6 +89,7 @@ ul{
 	border: none;
 	background: transparent;
 	margin-right: 3px;
+	margin-top: 2px;
 	float: right;
 	width: 9%;
 	cursor: pointer;
@@ -105,12 +106,20 @@ ul{
 	border: 1px solid  rgba(255,255,255,0.5);
 }
 
+#date{
+	box-sizing: border-box;
+	padding: 10px;
+	background: rgba(255, 255, 255, 0.8);
+	border: 2px solid rgba(196, 196, 196, 0.65);
+	border-radius: 15px;
+	color: rgba(64, 169, 68, 0.8);
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
 #filter-button{
 	border: none;
-	position: relative;
-	left: 500px;
-	top: -20px;
-	width: 20%;
+	width: 120px;
 	height: 40px;
 	background: rgba(64, 169, 68, 0.8);
 	box-shadow: 0px 4px 12px rgba(148, 148, 148, 0.25);
