--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -101,8 +101,7 @@ ul{
 }
 
 #search-button:active{
-	margin-right: 7px;
-	width: 7%;
+	margin-top: 4px;
 	border: 1px solid  rgba(255,255,255,0.5);
 }
 
@@ -127,6 +126,16 @@ ul{
 	color: #FFFFFF;
 	font-weight: 700;
 	text-align: center;
+	cursor: pointer;
+}
+
+#filter-button:hover{
+	border: 1px solid  rgba(255,255,255,0.5);
+}
+
+#filter-button:active{
+	margin-top: 3px;
+	border: 1px solid  rgba(255,255,255,0.5);
 }
 
 #table_container{
