--- a/MachineMonitorStatus/src/main/webapp/css/StyleCadastrar.css
+++ b/MachineMonitorStatus/src/main/webapp/css/StyleCadastrar.css
@@ -4,14 +4,18 @@
     padding:0;
 }
 body{
-	font-family: 'Poppins', sans-serif;
-	background: #FFF;
+	font-family: 'Poppins';
+	background: #F8F8FF;
 }
 
 ul{
 	padding: 0;
 	list-style: none;
 	
+}
+
+textarea{
+	resize: none;
 }
 
 #principal {
@@ -36,6 +40,7 @@ ul{
 
 #navegacao ul a{
 	width: 60px;
+	font-weight: 600;
 	font-size: 12px;
 	line-height: 18px;
 	text-align: center;
@@ -47,7 +52,7 @@ ul{
 
 #header_container{
 	width: 100%;
-	height: 90px;
+	height: 80px;
 	background: #FCFCFC;
 	box-shadow: 1px 1px 15px rgba(183, 183, 183, 0.25);
 	border-radius: 0px;
@@ -56,7 +61,7 @@ ul{
 #cadastro_container{
 	margin: 30px auto;
 	max-width: 800px;
-	width: 56%;
+	width: 50%;
 	height: 743px;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 20px rgba(221, 221, 221, 0.25);
@@ -66,9 +71,10 @@ ul{
 	}
 #cadastro_container h1{
 	text-align: center;
+	font-family: 'Poppins';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 36px;
 	text-align: center;
 	text-transform: uppercase;
@@ -90,8 +96,9 @@ ul{
 	background: transparent;
 	outline: none;
 	border-bottom: 2px solid rgba(64, 169, 68, 0.9);
+	font-family: 'Poppins';
 	font-weight: 500;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 24px;
 	color: #6D6D6D;
 }
@@ -126,6 +133,7 @@ ul{
 	box-shadow: 0px 0px 8px;
 	border: rgba(64, 169, 68, 0.25);
 	border-radius: 100px;
+	font-family: 'Poppins';
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 30px;
