--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -201,13 +201,16 @@ ul{
 	justify-content: center;
 	font-size: 14px;
 	border-radius: 50%;
+	font-family: 'Poppins';
+	font-weight: 700;
+	font-size: 16px;
+	
 }
 #paginate .pagination div:not(.numbers),
 #paginate .pagination div.numbers div{
 	width: 40px;
-	height: 40px;
+	height: 35px;
 	margin: 4px;
-	border: 1px solid red;
 }
 
 #paginate .pagination div.numbers div:hover,
@@ -244,14 +247,22 @@ ul{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 14px;
 	border-radius: 100px;
 	background: #FFFFFF;
 	box-shadow: 0px 2px 10px rgba(209, 209, 209, 0.25);
+	color: rgba(227, 0, 0, 0.8);
 }
 
-.pagination .prev,
-.pagination .next,
+.prev{
+	color: #ffffff;
+	background: rgba(227, 0, 0, 0.8);
+}
+
+.next{
+	color: #ffffff;
+	background: rgba(227, 0, 0, 0.8);
+}
+
 .active{
 	color: #ffffff;
 	background: rgba(227, 0, 0, 0.8);
