--- a/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
+++ b/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
@@ -4,8 +4,8 @@
     padding:0;
 }
 body{
-	font-family: 'Poppins', sans-serif;
-	background: #FFF;
+	font-family: 'Poppins';
+	background: #F8F8FF;
 }
 
 ul{
@@ -26,8 +26,8 @@ ul{
 #navegacao ul{
 	position: relative;
 	float: right;
-	width: 27%;
-	height: 97px;
+	width: 24%;
+	height: 80px;
 }
 
 #navegacao ul li{
@@ -36,18 +36,19 @@ ul{
 
 #navegacao ul a{
 	width: 60px;
+	font-weight: 600;
 	font-size: 12px;
 	line-height: 18px;
 	text-align: center;
 	display: block;
 	text-decoration: none;
 	color: #6D6D6D;
-	padding-top: 2em;
+	padding-top: 1.5em;
 }
 
 #header_container{
 	width: 100%;
-	height: 90px;
+	height: 80px;
 	background: #FCFCFC;
 	box-shadow: 1px 1px 15px rgba(183, 183, 183, 0.25);
 	border-radius: 0px;
