--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -179,9 +179,9 @@ ul{
 	width: 10%;
 	font-weight: 500;
 	text-align: center;
-	border-bottom: 1px solid #E7E7E7;
-	border-left: 1px solid #E7E7E7;
 }
+
+
 #paginate{
 	margin: 2em auto;
 	padding-left: 15px;
@@ -243,6 +243,11 @@ ul{
 	color: #FFFFFf;
 }
 
+.item{
+	border-top: 1px solid #E7E7E7;
+	border-left: 1px solid #E7E7E7;
+}
+
 .numbers{
 	display: flex;
 	align-items: center;
@@ -269,7 +274,7 @@ ul{
 }
 
 .firstColumn{
-	border-left:none;
+	border-top: 1px solid #E7E7E7;
 }
 
 .status{
