--- a/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
+++ b/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
@@ -1,17 +1,17 @@
-*{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
-body{
+
+body {
 	font-family: 'Poppins', sans-serif;
 	background: #FFF;
 }
 
-ul{
+ul {
 	padding: 0;
 	list-style: none;
-	
 }
 
 #principal {
@@ -19,33 +19,34 @@ ul{
 	min-width: 1000px;
 }
 
-#navegacao{
+#navegacao {
 	position: flex;
 }
 
-#navegacao ul{
+#navegacao ul {
 	position: relative;
 	float: right;
-	width: 27%;
-	height: 97px;
+	width: 24%;
+	height: 80px;
 }
 
-#navegacao ul li{
+#navegacao ul li {
 	float: left;
 }
 
-#navegacao ul a{
+#navegacao ul a {
 	width: 60px;
+	font-weight: 600;
 	font-size: 12px;
 	line-height: 18px;
 	text-align: center;
 	display: block;
 	text-decoration: none;
 	color: #6D6D6D;
-	padding-top: 2em;
+	padding-top: 1.5em;
 }
 
-#header_container{
+#header_container {
 	width: 100%;
 	height: 90px;
 	background: #FCFCFC;
@@ -53,60 +54,194 @@ ul{
 	border-radius: 0px;
 }
 
-
-#input{
-	border: none;
-	padding: 8px;
-	width: 85%;
-	height: 100%;
-	background: transparent;
-	outline: none;
-
-}
-
-
-#table_container{
+#table_container {
 	margin: 3em auto;
 	width: 75%;
 	border-radius: 20px 20px 0px 0px;
 	background: #CA2F2F 90%;
-	color: rgba (131, 138, 176, 0);
+	color: rgba(131, 138, 176, 0);
 }
 
-#table{
+#table {
 	width: 100%;
 	align-items: center;
 	text-align: center;
-	background: #FFFFFF;
-
+	background: #EDEDED;
 }
 
 #table_container h2 {
 	color: #FFFFFF;
-	padding: 15px 0 ;
+	padding: 15px 0;
 	height: 50px;
 	text-align: center;
 	border-radius: 20px 20px 0px 0px;
 	background: #838AB0;
 }
 
-#table td{
-	width: 10%;
+#table .th_names td {
 	color: #FFFFFF;
+	font-weight: bold;
 }
 
-.th_names{
+#table .list tr {
+	background-color: #FFFFFF;
+}
+
+#table .list .desc-machine {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	line-height: 16px; /* fallback */
+	max-height: 32px; /* fallback */
+	-webkit-line-clamp: 2; /* number of lines to show */
+	-webkit-box-orient: vertical;
+	font-weight: normal;
+	/*font-size: small;*/
+}
+
+#table .list .last-heartbeat {
+	font-weight: normal;
+	/*font-size: small;*/
+}
+
+#table .info-memory-state, .info-memory-state-item {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.info-memory-state-item .i-state {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    flex-direction: row;
+}
+
+.info-memory-state-item .i-state {
+	position: relative;
+
+}
+
+.info-memory-state-item span {
+	
+	padding: .3em;
+}
+
+.info-memory-state .divider{
+	
+	padding: .5em;
+}
+
+.info-memory-state-item div img {
+	left: 0;
+	top: 0;
+}
+
+.info-memory-state-item div span {
+	font-size: 9px;
+	position: absolute;
+	
+}
+
+#table td {
+	min-width: 10%;
+	color: rgb(109, 109, 109);
+	font-weight: bold;
+	padding: .3em .5em;
+}
+
+.th_names {
 	width: 100%;
 	height: 50px;
 	background: #838AB0;
 }
 
-
-.logo{
+.logo {
 	position: absolute;
 	width: 65px;
 	height: 66.68px;
 	left: 40px;
 	top: 25px;
 	border-radius: 10px;
+}
+
+#paginate {
+	margin: 2em auto;
+	padding-left: 15px;
+	background: none;
+}
+
+#paginate .pagination {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#paginate .pagination div:not(.numbers) {
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 14px;
+	border-radius: 50%;
+	font-family: 'Poppins';
+	font-weight: 700;
+	font-size: 15px;
+}
+
+#paginate .pagination div:not(.numbers), #paginate .pagination div.numbers div
+	{
+	width: 40px;
+	height: 35px;
+	margin: 4px;
+}
+
+#paginate .pagination div.numbers div:hover, #paginate .pagination div.numbers div.active
+	{
+	color: #ffffff;
+	background: rgba(131, 138, 176, 1);
+}
+
+.numbers {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100px;
+	background: #FFFFFF;
+	box-shadow: 0px 2px 10px rgba(209, 209, 209, 0.25);
+	color: rgba(131, 138, 176, 0.8);
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 27px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.prev {
+	color: #ffffff;
+	background: rgba(131, 138, 175, 1);
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 48px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.next {
+	color: #ffffff;
+	background: rgba(131, 138, 175, 1);
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 48px;
+	text-align: center;
+	text-transform: uppercase;
 }
