--- a/MachineMonitorStatus/src/main/webapp/css/Style.css
+++ b/MachineMonitorStatus/src/main/webapp/css/Style.css
@@ -91,10 +91,9 @@ ul{
 	border: none;
 	background: transparent;
 	margin-right: 3px;
-	margin-top: 2px;
+	margin-top: 0;
 	float: right;
 	width: 9%;
-	cursor: pointer;
 	outline: none;
 }
 
@@ -103,7 +102,7 @@ ul{
 }
 
 #search-button:active{
-	margin-top: 4px;
+	margin-top: 1px;
 	border: 1px solid  rgba(255,255,255,0.5);
 }
 
