--- a/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
+++ b/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
@@ -99,6 +99,8 @@ ul {
 	/*font-size: small;*/
 }
 
+
+
 #table .list .last-heartbeat {
 	font-weight: normal;
 	/*font-size: small;*/
@@ -245,3 +247,56 @@ ul {
 	text-align: center;
 	text-transform: uppercase;
 }
+
+
+.item .msg {
+            display: none;
+            position: absolute;
+            top: 5px;
+            left: 80px;
+
+            border-radius: 2em;
+            background-color: rgb(202, 205, 208);
+            padding: .2em;
+        }
+
+        .item {
+            position: relative;
+        }
+
+        .item:hover .msg {
+            display: block;
+        }
+
+        .item .content-item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            height: 30px;
+
+            background-color: azure;
+        }
+        
+        
+.info-memory-state{
+	position: relative;
+	
+}
+        
+.balloon {
+	position: absolute;
+	display: none;
+	padding: .5em;
+	background-color: #fff;
+	z-index: 10;
+	background: #EBEBEB;
+	box-shadow: 0px 4px 8px rgba(217, 217, 217, 0.25);
+	white-space: nowrap;
+	border-radius: 4px;
+}     
+
+.info-memory-state:hover .balloon {
+	display: block;
+	left: 110%;
+}
+
