--- a/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
+++ b/MachineMonitorStatus/src/main/webapp/css/StylesMonitorGeral.css
@@ -1,3 +1,15 @@
+:root {
+	--primary: #0076c6;
+	--secondary: #333333;
+	--background-page: #F8F8FF;
+
+	--column-width: 100px;
+	--line-height: 20px;
+
+	--item-table: 13px;
+}
+
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -5,8 +17,9 @@
 }
 
 body {
-	font-family: 'Poppins', sans-serif;
-	background: #FFF;
+	font-family: 'Poppins';
+	background: #F8F8FF;
+
 }
 
 ul {
@@ -48,7 +61,7 @@ ul {
 
 #header_container {
 	width: 100%;
-	height: 90px;
+	height: 80px;
 	background: #FCFCFC;
 	box-shadow: 1px 1px 15px rgba(183, 183, 183, 0.25);
 	border-radius: 0px;
@@ -56,63 +69,85 @@ ul {
 
 #table_container {
 	margin: 3em auto;
-	width: 75%;
-	border-radius: 20px 20px 0px 0px;
-	background: #CA2F2F 90%;
-	color: rgba(131, 138, 176, 0);
+	width: 85vw;
+	border-radius: 20px;
+	box-shadow: 0px 0px 15px rgba(199, 199, 199, 0.25);
+	background: #FFFFFF;
+	overflow: auto;
+}
 }
 
 #table {
 	width: 100%;
 	align-items: center;
 	text-align: center;
-	background: #EDEDED;
+	background: #FFFFFf;
+	border-radius: 0px 0px 20px 20px;	
 }
 
 #table_container h2 {
 	color: #FFFFFF;
-	padding: 15px 0;
-	height: 50px;
+	width: 111.5vw;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 23px;
+	padding: 10px 0 ;
+	height: 45px;
 	text-align: center;
 	border-radius: 20px 20px 0px 0px;
-	background: #838AB0;
-}
+	background: rgba(117, 125, 167, 0.9);
+	}
 
-#table .th_names td {
-	color: #FFFFFF;
-	font-weight: bold;
+
+.th_names td {
+	color: #FFFFFf;
+	
 }
 
 #table .list tr {
-	background-color: #FFFFFF;
+	background-color: #E7E7E7;
 }
 
 #table .list .desc-machine {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
-	line-height: 16px; /* fallback */
-	max-height: 32px; /* fallback */
-	-webkit-line-clamp: 2; /* number of lines to show */
+	line-height: 16px; 
+	max-height: 32px; 
+	-webkit-line-clamp: 2; 
 	-webkit-box-orient: vertical;
 	font-weight: normal;
-	/*font-size: small;*/
+
 }
 
+#table .list .name-machine {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	line-height: 16px; 
+	max-height: 32px; 
+	-webkit-line-clamp: 2; 
+	-webkit-box-orient: vertical;
+	font-size: 15px;
+    text-align: center;
+}
 
 
 #table .list .last-heartbeat {
 	font-weight: normal;
-	/*font-size: small;*/
 }
 
 #table .info-memory-state, .info-memory-state-item {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
+	width: 105%;
+	font-size: 13px;
 }
-
+#table .info-memory-state-item {
+	width: 45%;
+}
 
 .info-memory-state-item .i-state {
 	display: flex;
@@ -134,6 +169,8 @@ ul {
 
 .info-memory-state .divider{
 	
+	margin-right: 0.4em;
+	width: 10%;
 	padding: .5em;
 }
 
@@ -148,17 +185,64 @@ ul {
 	
 }
 
-#table td {
-	min-width: 10%;
-	color: rgb(109, 109, 109);
-	font-weight: bold;
+#table tr, th_names {
+	display: grid;
+	grid-gap: 2px;
+	grid-template-columns: repeat(10, 1fr);
+}
+
+#table td > *{
+	font-size: var(--item-table);
+}
+
+
+
+#table .list td:nth-child(7){
+	padding: 0.4em;
+	line-height: 1em;
+	
+}
+
+#table td {  
+    width: 11vw ;
+	height: 40px;
+	font-weight: 500;
+	text-align: center;
 	padding: .3em .5em;
 }
 
+#table .list td:nth-child(8){
+	width: 11vw;
+}
+
+#table .list td:nth-child(9){
+	width: 11vw;
+}
+
+#table .list td:nth-child(10){
+	width: 11vw;
+}
+
+#table tr {
+	margin: 1px 1px;
+}
+.monitor {
+	border-top: 1px solid #E7E7E7;
+    border-left: 1px solid #E7E7E7;
+}
+
+
 .th_names {
 	width: 100%;
-	height: 50px;
-	background: #838AB0;
+	height: 60px;
+	background: rgba(117, 125, 167, 0.9);
+	font-family: 'Poppins';	
+	font-size: 17px;
+	text-align: center;
+	text-transform: uppercase;
+	line-height: 20px;
+	align-items: center;
+
 }
 
 .logo {
@@ -168,6 +252,33 @@ ul {
 	left: 40px;
 	top: 25px;
 	border-radius: 10px;
+}
+
+.status{
+	margin: auto;
+	font-family: 'Poppins';
+	font-weight: 600;
+	font-size: 18px;
+	width: 22px;
+	height: 22px;
+	border-radius: 50%;
+	background: rgba(64, 169, 68, 0.9);
+}
+
+.statusFail{
+	margin: auto;
+	font-family: 'Poppins';
+	font-weight: 600;
+	font-size: 18px;
+	width: 22px;
+	height: 22px;
+	border-radius: 50%;
+	background: rgba(227, 0, 0, 0.9);
+}
+
+.firstColumn{
+	border-top: 1px solid #E7E7E7;
+	background-color: #fff;
 }
 
 #paginate {
@@ -191,7 +302,10 @@ ul {
 	border-radius: 50%;
 	font-family: 'Poppins';
 	font-weight: 700;
-	font-size: 15px;
+	font-size: 16px;
+	width: 40px;
+	height: 35px;
+	margin: 4px;
 }
 
 #paginate .pagination div:not(.numbers), #paginate .pagination div.numbers div
@@ -204,7 +318,7 @@ ul {
 #paginate .pagination div.numbers div:hover, #paginate .pagination div.numbers div.active
 	{
 	color: #ffffff;
-	background: rgba(131, 138, 176, 1);
+	background: rgba(117, 125, 167, 0.9);
 }
 
 .numbers {
@@ -214,38 +328,19 @@ ul {
 	border-radius: 100px;
 	background: #FFFFFF;
 	box-shadow: 0px 2px 10px rgba(209, 209, 209, 0.25);
-	color: rgba(131, 138, 176, 0.8);
-	font-family: 'Poppins';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 27px;
-	text-align: center;
-	text-transform: uppercase;
+	color: rgba(117, 125, 167, 0.9);
 }
 
 .prev {
 	color: #ffffff;
 	background: rgba(131, 138, 175, 1);
-	font-family: 'Poppins';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 32px;
-	line-height: 48px;
-	text-align: center;
-	text-transform: uppercase;
+	
 }
 
 .next {
 	color: #ffffff;
-	background: rgba(131, 138, 175, 1);
-	font-family: 'Poppins';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 32px;
-	line-height: 48px;
-	text-align: center;
-	text-transform: uppercase;
+	background: rgba(117, 125, 167, 0.9);
+
 }
 
 
@@ -262,8 +357,13 @@ ul {
 
         .item {
             position: relative;
+            background-color: #fff
         }
 
+		.item {
+    	border-top: 1px solid #E7E7E7;
+		}
+		
         .item:hover .msg {
             display: block;
         }
@@ -299,4 +399,3 @@ ul {
 	display: block;
 	left: 110%;
 }
-
